--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -15,5 +15,10 @@
 	"peerDependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.9.3",
+		"@emotion/styled": "^11.9.3",
+		"@mui/material": "^5.8.4"
 	}
 }
