--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -16,7 +16,8 @@
 		"suppressImplicitAnyIndexErrors": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"baseUrl": "dist"
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
