monorepo setup working!!!

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"web:start": "cd apps/web && npm run dev",
+		"spa:start": "cd apps/spa && npm start",
+		"dev": "concurrently \"npm run spa:start\" \"npm run web:start\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
