--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -12,7 +12,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "PORT=3001 react-scripts start",
+		"dev": "PORT=3001 react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
