--- a/packages/ds/tsconfig.json
+++ b/packages/ds/tsconfig.json
@@ -1,23 +1,22 @@
 {
 	"compilerOptions": {
-		"outDir": "dist",
+		"outDir": "",
 		"module": "esnext",
 		"lib": ["dom", "esnext", "dom.iterable"],
 		"moduleResolution": "node",
 		"jsx": "react",
-		"sourceMap": true,
-		"declaration": true,
-		"esModuleInterop": true,
-		"noImplicitReturns": true,
-		"noImplicitThis": true,
+		"sourceMap": false,
+		"declaration": false,
+		"esModuleInterop": false,
+		"noImplicitReturns": false,
+		"noImplicitThis": false,
 		"noImplicitAny": false,
-		"strictNullChecks": true,
+		"strictNullChecks": false,
 		"strict": false,
-		"suppressImplicitAnyIndexErrors": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"allowSyntheticDefaultImports": true,
-		"baseUrl": "dist"
+		"suppressImplicitAnyIndexErrors": false,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"allowSyntheticDefaultImports": true
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
